Fix the right extra space from whole body

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
 
-
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 /*=====Navbar style========*/
 
 .navbar-default {
